[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites.png" type="Texture" id=1]
[ext_resource path="res://mobs/Mob.gd" type="Script" id=2]
[ext_resource path="res://mobs/MobBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://effects/DamageNumberSpawner.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 6.93626

[node name="Mob" type="KinematicBody2D" groups=[
"mobs",
]]
script = ExtResource( 2 )
speed = 200.0
max_health = 50.0
bullet_scene = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.705882 )
position = Vector2( -1, 1 )
texture = ExtResource( 1 )
vframes = 8
hframes = 8
frame = 5

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 8
hframes = 8
frame = 5

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="InvulnTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DamageNumberSpawner" parent="." instance=ExtResource( 4 )]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="InvulnTimer" to="." method="_on_InvulnTimer_timeout"]
